Fix text shadow for image upload in dark mode

--- a/src/components/ImageUpload.scss
+++ b/src/components/ImageUpload.scss
@@ -42,6 +42,9 @@ label.ra-image-upload {
   cursor: pointer;
   button {
     text-shadow: 0 0 3px white;
+    @media (prefers-color-scheme: dark) {
+      text-shadow: 0 1px 4px #000000;
+    }
   }
 }
 
